--- a/app/src/main/res/layout/activity_sliding_mypoint.xml
+++ b/app/src/main/res/layout/activity_sliding_mypoint.xml
@@ -1,142 +1,151 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/AppColorLightGray"
-    android:orientation="vertical">
-
-
-    <RelativeLayout
-        style="@style/White_TitleBar"
-        android:background="@color/AppColorWhite">
-
-        <ImageView
-            android:id="@+id/activity_sliding_mypoint_iv_back"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="26dp"
-            android:onClick="onClick_backButton"
-            android:src="@drawable/blue_back_button" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:text="@string/mypoint"
-            android:textColor="@color/colorPrimary"
-            android:textSize="@dimen/titlesize"
-            android:textStyle="bold" />
-    </RelativeLayout>
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="15dp"
-        android:orientation="vertical">
+        android:background="@color/AppColorLightGrayTwo"
+        android:orientation="vertical"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="120dp"
-            android:background="@color/AppColorWhite"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
+        <RelativeLayout
+            style="@style/White_TitleBar"
+            android:background="@color/AppColorWhite">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="2"
-                android:gravity="center_vertical">
-
-                <ImageView
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_marginLeft="20dp"
-                    android:src="@drawable/my_point_icon" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="12dp"
-                android:layout_weight="1"
-                android:gravity="center_vertical|right"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/activity_sliding_mypoint_tv_point"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="20000"
-                    android:textColor="@color/AppColorBlack"
-                    android:textSize="50sp" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:text="원"
-                    android:textColor="@color/AppColorLightGray"
-                    android:textSize="30sp" />
-            </LinearLayout>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="250dp"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/sliding_mypoint_blue_box"
-            android:orientation="vertical">
+            <ImageView
+                android:id="@+id/activity_sliding_mypoint_iv_back"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="26dp"
+                android:onClick="onClick_backButton"
+                android:src="@drawable/blue_back_button" />
 
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:gravity="center"
-                android:text="환전 하기"
+                android:layout_centerInParent="true"
+                android:text="@string/mypoint"
                 android:textColor="@color/colorPrimary"
-                android:textSize="20sp" />
+                android:textSize="@dimen/titlesize"
+                android:textStyle="bold" />
+        </RelativeLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="15dp"
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center">
+                android:layout_height="120dp"
+                android:background="@color/AppColorWhite"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
 
-                <EditText
-                    android:id="@+id/activity_sliding_mypoint_et_45"
-                    android:layout_width="50dp"
-                    android:layout_height="30sp"
-                    android:layout_marginRight="5dp"
-                    android:background="@color/AppColorLightGray"
-                    android:inputType="number"
-                    android:paddingRight="3dp"
-                    android:text="1"
-                    android:textAlignment="textEnd"
-                    android:textColor="@color/AppColorBlack"
-                    android:textSize="22sp" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="2"
+                    android:gravity="center_vertical">
+
+                    <ImageView
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:layout_marginLeft="20dp"
+                        android:src="@drawable/my_point_icon" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="12dp"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical|right"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/activity_sliding_mypoint_tv_point"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="0"
+                        android:textColor="@color/AppColorBlack"
+                        android:textSize="50sp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:text="원"
+                        android:textColor="@color/AppColorLightGray"
+                        android:textSize="30sp" />
+                </LinearLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="250dp"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/sliding_mypoint_blue_box"
+                android:orientation="vertical">
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginRight="15dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
                     android:gravity="center"
-                    android:text=",000 원"
-                    android:textColor="@color/colorPrimaryGray"
-                    android:textSize="22sp" />
+                    android:text="환전 하기"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="20sp" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center">
+
+                    <EditText
+                        android:id="@+id/activity_sliding_mypoint_et_changePoint"
+                        android:layout_width="50dp"
+                        android:layout_height="30sp"
+                        android:layout_marginRight="5dp"
+                        android:background="@color/AppColorLightGray"
+                        android:inputType="number"
+                        android:paddingRight="3dp"
+                        android:text="1"
+                        android:textAlignment="textEnd"
+                        android:textColor="@color/AppColorBlack"
+                        android:textSize="22sp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginRight="15dp"
+                        android:gravity="center"
+                        android:text=",000 원"
+                        android:textColor="@color/colorPrimaryGray"
+                        android:textSize="22sp" />
+                </LinearLayout>
+
             </LinearLayout>
 
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/activity_sliding_mypoint_tv_enter"
-            android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:background="@color/colorPrimary"
-            android:gravity="center"
-            android:text="환전 신청"
-            android:textColor="@color/AppColorWhite"
-            android:textSize="30sp" />
     </LinearLayout>
-</LinearLayout>
+
+    <TextView
+        android:id="@+id/activity_sliding_mypoint_tv_enter"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:background="@color/colorPrimary"
+        android:gravity="center"
+        android:text="환전 신청"
+        android:layout_alignParentBottom="true"
+        android:textColor="@color/AppColorWhite"
+        android:textSize="30sp" />
+</RelativeLayout>
