--- a/app/src/main/res/layout/listview_item_one_way_together.xml
+++ b/app/src/main/res/layout/listview_item_one_way_together.xml
@@ -5,7 +5,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="195dp"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <include layout="@layout/listview_item_one_way_together_top" />
